Fixed map marker on mobile, fixed tabs drop closing on mobile, added changes after code review
1. Fixed map marker on mobile
2. Fixed tabs drop closing after choosing location on mobile
3. Added changes after code review
4. Recoded location.liquid
5. Cleaned up the code

--- a/assets/map.css
+++ b/assets/map.css
@@ -1,7 +1,8 @@
 .map {
   aspect-ratio: 16 / 9;
   height: 100%;
-  max-width: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
 .map__error {
